feat(studyRoom): 스터디 홀 수정 및 삭제 API 엔드포인트 추가
- AdminStudyRoomController에 PUT, DELETE 엔드포인트 추가
- DTO 유효성 검사를 위해 @Valid 애너테이션 적용